# screenbolt

./: Dockerfile  README.md  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements-windows.txt
.github/workflows/: deploy.yml  linux-build.yml  linux-deb-build.yml  linux-rpm-build.yml  windows-build.yml
packaging/linux/: build-deb.sh  build-rpm.sh  build.sh  screenbolt.spec
packaging/macos/: screenbolt.spec
packaging/windows/: screenbolt.iss  screenbolt.spec
screenbolt/: main.py  model.py  transforms.py
screenbolt/qml/components/: ModeButton.qml
screenbolt/qml/countdown/: Countdown.qml
screenbolt/qml/entry/: ControlPanel.qml  CustomSelector.qml  ScreenBolt.qml  main.qml
screenbolt/qml/studio/: ClipTrack.qml  ExportDialog.qml  Studio.qml  TimeSlider.qml  TopBar.qml  VideoPreview.qml
screenbolt/qml/studio/sidebar/background_settings/: GradientPage.qml  ImagePage.qml
screenbolt/qml/studio/sidebar/shape_settings/: ShapeSettings.qml
screenbolt/resources/: icons.qrc  main.qrc
screenbolt/utils/: cursor.py  general.py
