[tool.poetry]
name = "screenbolt"
version = "1.1.0"
description = "ScreenBolt - A PySide6-based GUI application for screen recording and editing."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "screenbolt" }]
# Specify the entry point for your application
scripts = { screenbolt = "screenbolt.main:main" }

[tool.poetry.dependencies]
python = "^3.8"
PySide6 = ">=6.7.2,<7.0"
opencv-python = ">=4.6.0,<=4.10.0.84"
Pillow = ">=7.0,<=10.4.0"
mss = ">=9.0.1,<10"
pyautogui = ">=0.9.54,<1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
